--- a/src/index.css
+++ b/src/index.css
@@ -240,3 +240,13 @@ input::placeholder {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+
+.ipoDate {
+  margin-bottom: 0.5rem;
+  font-weight: 400;
+}
+
+.btcPriceIpoDate {
+  margin-bottom: 2rem;
+  font-weight: 400;
+}
