--- a/src/index.css
+++ b/src/index.css
@@ -123,8 +123,8 @@ section {
 }
 
 .img {
-  height: 7rem;
-  width: 7rem;
+  height: 6rem;
+  width: 6rem;
   object-fit: cover;
   border-radius: 9999px;
   margin-bottom: 2rem;
@@ -203,23 +203,46 @@ section {
 }
 
 .initialInvestment {
+  display: flex;
+  flex-direction: row;
   margin-bottom: 0;
-  margin-right: 0.25rem;
-  margin-left: 3rem;
+  margin-right: 0.5rem;
+  /* margin-left: 3rem;  */
+}
+
+.investmentAmountWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
 }
 
 .investmentAmount {
+  display: block;
+  width: inherit;
+  font-size: inherit;
+  /* font-size: 0.875rem; */
   outline: none;
   border: none;
   color: inherit;
   background: inherit;
-  margin-left: 1rem;
+}
+
+.dollar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0rem;
+  margin-right: 0.15rem;
+  font-weight: bold;
 }
 
 input {
   letter-spacing: var(--spacing);
   text-transform: capitalize;
-  font-size: 0.875;
+  /* font-size: 0.875; */
   font-weight: bold;
 }
 /* 
@@ -249,4 +272,5 @@ input::placeholder {
 .btcPriceIpoDate {
   margin-bottom: 2rem;
   font-weight: 400;
+  text-align: center;
 }
