--- a/src/index.css
+++ b/src/index.css
@@ -200,13 +200,16 @@ section {
   margin: 0;
   padding-bottom: 3rem;
   padding-top: 1rem;
+  width: 100%;
+  /* margin-left: 1.5rem; */
 }
 
 .initialInvestment {
   display: flex;
   flex-direction: row;
   margin-bottom: 0;
-  margin-right: 0.5rem;
+  margin-right: 0.25rem;
+  /* width: 50%; */
   /* margin-left: 3rem;  */
 }
 
@@ -215,19 +218,26 @@ section {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 5rem;
+  /* width: 50%; */
+  /* width: 5rem; */
 }
 
 .investmentAmount {
   display: block;
-  width: inherit;
+  /* width: inherit; */
   font-size: inherit;
   /* font-size: 0.875rem; */
   outline: none;
   border: none;
   color: inherit;
   background: inherit;
+  text-align: start;
+  /* width: 5rem; */
 }
+
+/* .investmentAmount::placeholder {
+  font-weight: 600;
+} */
 
 .dollar {
   display: flex;
