--- a/src/index.css
+++ b/src/index.css
@@ -160,6 +160,7 @@ section {
   align-items: center;
   flex-wrap: wrap;
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 .btc {
@@ -280,7 +281,38 @@ input::placeholder {
 }
 
 .btcPriceIpoDate {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
   font-weight: 400;
   text-align: center;
+}
+
+.btnContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+}
+
+.previousIcon {
+  /* margin-right: 0.5rem; */
+  justify-content: center;
+  align-items: center;
+  background: none;
+  color: rgb(119, 162, 242);
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.nextIcon {
+  margin-left: 2rem;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  color: rgb(119, 162, 242);
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1.5rem;
 }
