--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,8 @@ section {
 }
 
 .title {
+  display: flex;
+  flex-direction: row;
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
@@ -128,6 +130,30 @@ section {
   object-fit: cover;
   border-radius: 9999px;
   margin-bottom: 2rem;
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.btcGif {
+  height: 3rem;
+  width: 3rem;
+  object-fit: cover;
+  border-radius: 9999px;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.ipoGif {
+  height: 3rem;
+  width: 3rem;
+  object-fit: cover;
+  border-radius: 9999px;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -393,4 +419,9 @@ input::placeholder {
   outline: none;
   cursor: pointer;
   font-size: 1.5rem;
+}
+
+.xyPlot {
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
 }
