--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ h1 {
   font-size: 3rem;
 }
 h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 h3 {
   font-size: 1rem;
@@ -105,6 +105,7 @@ section {
 .title {
   display: flex;
   flex-direction: row;
+  align-items: center;
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
@@ -136,8 +137,8 @@ section {
 }
 
 .btcGif {
-  height: 3rem;
-  width: 3rem;
+  height: 2rem;
+  width: 2rem;
   object-fit: cover;
   border-radius: 9999px;
   margin-left: 0.5rem;
@@ -148,8 +149,8 @@ section {
 }
 
 .ipoGif {
-  height: 3rem;
-  width: 3rem;
+  height: 2rem;
+  width: 2rem;
   object-fit: cover;
   border-radius: 9999px;
   margin-left: 0.5rem;
